--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           >
           <ul class="nav-menu">
             <li class="nav-menu-item">
-              <a href="./index.html" class="nav-menu-link">Studio</a>
+              <a href="./index.html" class="nav-menu-link current">Studio</a>
             </li>
             <li class="nav-menu-item">
               <a href="" class="nav-menu-link">Portfolio</a>
@@ -57,7 +57,7 @@
     </header>
     <main>
       <!-- Hero image -->
-      <section class="hero-sec">
+      <section class="hero-section">
         <div class="container">
           <h1 class="hero-heading">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn">Order Service</button>
@@ -69,6 +69,11 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="solution-list">
             <li class="solution-list-item">
+              <div class="solution-section-img">
+                <svg width="64" height="64">
+                  <use href="./images/svg/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="solution-list-heading">Strategy</h3>
               <p class="solution-list-text">
                 Our goal is to identify the business problem to walk away with
@@ -76,6 +81,11 @@
               </p>
             </li>
             <li class="solution-list-item">
+              <div class="solution-section-img">
+                <svg width="64" height="64">
+                  <use href="./images/svg/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="solution-list-heading">Punctuality</h3>
               <p class="solution-list-text">
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +93,11 @@
               </p>
             </li>
             <li class="solution-list-item">
+              <div class="solution-section-img">
+                <svg width="64" height="64">
+                  <use href="./images/svg/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="solution-list-heading">Diligence</h3>
               <p class="solution-list-text">
                 Research and confirm brands that present the strongest digital
@@ -90,6 +105,11 @@
               </p>
             </li>
             <li class="solution-list-item">
+              <div class="solution-section-img">
+                <svg width="64" height="64">
+                  <use href="./images/svg/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="solution-list-heading">Technologies</h3>
               <p class="solution-list-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -115,6 +135,36 @@
               <div class="person-details">
                 <h3 class="team-list-heading">Mark Guerrero</h3>
                 <p class="team-list-text">Product Designer</p>
+                <ul class="person-social-list">
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-instagtam"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -128,6 +178,36 @@
               <div class="person-details">
                 <h3 class="team-list-heading">Tom Ford</h3>
                 <p class="team-list-text">Frontend Developer</p>
+                <ul class="person-social-list">
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-instagtam"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -141,6 +221,36 @@
               <div class="person-details">
                 <h3 class="team-list-heading">Camila Garcia</h3>
                 <p class="team-list-text">Marketing</p>
+                <ul class="person-social-list">
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-instagtam"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -154,6 +264,36 @@
               <div class="person-details">
                 <h3 class="team-list-heading">Daniel Wilson</h3>
                 <p class="team-list-text">UI Designer</p>
+                <ul class="person-social-list">
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-instagtam"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-block-item">
+                    <a href="" class="social-icon-link">
+                      <svg class="svg-icon" width="16" height="16">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -185,6 +325,12 @@
                 width="360"
                 height="300"
               />
+              <!-- <p class="section-four-img-p">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p> -->
+
               <div class="app-details">
                 <h3 class="portfolio-list-heading">Cashless Payment</h3>
                 <p class="portfolio-list-text">Marketing</p>
