--- a/index.html
+++ b/index.html
@@ -305,13 +305,18 @@
           <h2 class="section-heading">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-image"
-                src="./images/portfolio/banking.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  class="portfolio-list-image"
+                  src="./images/portfolio/banking.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+                provident temporibus neque, ad debitis magni?
+              </div>
               <div class="app-details">
                 <h3 class="portfolio-list-heading">Banking App</h3>
                 <p class="portfolio-list-text">App</p>
