--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           <h2 class="section-heading">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <div class="overlay">
+              <div class="overlay-img">
                 <img
                   class="portfolio-list-image"
                   src="./images/portfolio/banking.jpg"
@@ -313,9 +313,11 @@
                   width="360"
                   height="300"
                 />
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
-                provident temporibus neque, ad debitis magni?
+                <p class="overlay-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="app-details">
                 <h3 class="portfolio-list-heading">Banking App</h3>
@@ -323,65 +325,100 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-image"
-                src="./images/portfolio/cashless.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="overlay-img">
+                <img
+                  class="portfolio-list-image"
+                  src="./images/portfolio/cashless.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app-details">
                 <h3 class="portfolio-list-heading">Cashless Payment</h3>
                 <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-image"
-                src="./images/portfolio/meditation.jpg"
-                alt="Meditaion App"
-                width="360"
-                height="300"
-              />
+              <div class="overlay-img">
+                <img
+                  class="portfolio-list-image"
+                  src="./images/portfolio/meditation.jpg"
+                  alt="Meditaion App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app-details">
                 <h3 class="portfolio-list-heading">Meditation App</h3>
                 <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-image"
-                src="./images/portfolio/taxi.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="overlay-img">
+                <img
+                  class="portfolio-list-image"
+                  src="./images/portfolio/taxi.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app-details">
                 <h3 class="portfolio-list-heading">Taxi Service</h3>
                 <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-image"
-                src="./images/portfolio/screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="overlay-img">
+                <img
+                  class="portfolio-list-image"
+                  src="./images/portfolio/screen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app-details">
                 <h3 class="portfolio-list-heading">Screen Illustrations</h3>
                 <p class="portfolio-list-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-image"
-                src="./images/portfolio/online.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="overlay-img">
+                <img
+                  class="portfolio-list-image"
+                  src="./images/portfolio/online.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app-details">
                 <h3 class="portfolio-list-heading">Online Courses</h3>
                 <p class="portfolio-list-text">Marketing</p>
