--- a/index.html
+++ b/index.html
@@ -430,14 +430,65 @@
     </main>
     <!-- Footer -->
     <footer class="page-footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo"
-          >Web<span class="accent-footer">Studio</span></a
-        >
-        <p class="page-footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container page-footer-container">
+        <div class="footer-logo-container">
+          <a href="./index.html" class="footer-logo"
+            >Web<span class="accent-footer">Studio</span></a
+          >
+          <p class="page-footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-media">
+          <p class="social-heading">Social media</p>
+          <ul class="social-items">
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.facebook.com/"
+                target="_blank"
+              >
+                <svg class="social-icon" width="24" height="20">
+                  <use href="./images/svg/icons.svg#icon-facebook_f"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.instagram.com/"
+                target="_blank"
+              >
+                <svg class="social-icon" width="24" height="20">
+                  <use href="./images/svg/icons.svg#icon-instagram_f"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://ua.linkedin.com/"
+                target="_blank"
+              >
+                <svg class="social-icon" width="24" height="20">
+                  <use href="./images/svg/icons.svg#icon-linkedin_f"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://twitter.com/"
+                target="_blank"
+              >
+                <svg class="social-icon" width="24" height="20">
+                  <use href="./images/svg/icons.svg#icon-twitter_f"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
