--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li class="solution-list-item">
               <div class="solution-section-img">
                 <svg width="64" height="64">
-                  <use href="./images/svg/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="solution-list-heading">Strategy</h3>
@@ -83,7 +83,7 @@
             <li class="solution-list-item">
               <div class="solution-section-img">
                 <svg width="64" height="64">
-                  <use href="./images/svg/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="solution-list-heading">Punctuality</h3>
@@ -95,7 +95,7 @@
             <li class="solution-list-item">
               <div class="solution-section-img">
                 <svg width="64" height="64">
-                  <use href="./images/svg/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="solution-list-heading">Diligence</h3>
@@ -107,7 +107,7 @@
             <li class="solution-list-item">
               <div class="solution-section-img">
                 <svg width="64" height="64">
-                  <use href="./images/svg/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="solution-list-heading">Technologies</h3>
@@ -139,28 +139,28 @@
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-instagtam"></use>
+                        <use href="./images/icons.svg#icon-instagtam"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -182,28 +182,28 @@
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-instagtam"></use>
+                        <use href="./images/icons.svg#icon-instagtam"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -225,28 +225,28 @@
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-instagtam"></use>
+                        <use href="./images/icons.svg#icon-instagtam"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -268,28 +268,28 @@
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-instagtam"></use>
+                        <use href="./images/icons.svg#icon-instagtam"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-block-item">
                     <a href="" class="social-icon-link">
                       <svg class="svg-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -449,7 +449,7 @@
                 href="https://www.facebook.com/"
                 target="_blank"
               >
-                <svg class="social-icon" width="24" height="20">
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/svg/icons.svg#icon-facebook_f"></use>
                 </svg>
               </a>
@@ -460,7 +460,7 @@
                 href="https://www.instagram.com/"
                 target="_blank"
               >
-                <svg class="social-icon" width="24" height="20">
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/svg/icons.svg#icon-instagram_f"></use>
                 </svg>
               </a>
@@ -471,7 +471,7 @@
                 href="https://ua.linkedin.com/"
                 target="_blank"
               >
-                <svg class="social-icon" width="24" height="20">
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/svg/icons.svg#icon-linkedin_f"></use>
                 </svg>
               </a>
@@ -482,7 +482,7 @@
                 href="https://twitter.com/"
                 target="_blank"
               >
-                <svg class="social-icon" width="24" height="20">
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/svg/icons.svg#icon-twitter_f"></use>
                 </svg>
               </a>
