--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 target="_blank"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-facebook_f"></use>
+                  <use href="./images/icons.svg#icon-facebook_f"></use>
                 </svg>
               </a>
             </li>
@@ -461,7 +461,7 @@
                 target="_blank"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-instagram_f"></use>
+                  <use href="./images/icons.svg#icon-instagram_f"></use>
                 </svg>
               </a>
             </li>
@@ -472,7 +472,7 @@
                 target="_blank"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-linkedin_f"></use>
+                  <use href="./images/icons.svg#icon-linkedin_f"></use>
                 </svg>
               </a>
             </li>
@@ -483,7 +483,7 @@
                 target="_blank"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-twitter_f"></use>
+                  <use href="./images/icons.svg#icon-twitter_f"></use>
                 </svg>
               </a>
             </li>
